# bluezcpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: example.cpp  example_char.cpp
include/bluezcpp/: adapter.h  bluezcpp.h  characteristic.h  common.h  descriptor.h  device.h  service.h
src/: adapter.cpp  characteristic.cpp  descriptor.cpp  device.cpp  internal.h  service.cpp
